--- a/index.html
+++ b/index.html
@@ -15,29 +15,31 @@
 
     <div id="calculator">
       <div id="screen">
-        <div id="operations">6+5</div>
-        <div id="results">11</div>
+        <div id="operations"></div>
+        <div id="results"></div>
       </div>
       <div id="operators">
-        <button>+</button>
-        <button>-</button>
-        <button>*</button>
-        <button>/</button>
+        <button class="operator">+</button>
+        <button class="operator">-</button>
+        <button class="operator">*</button>
+        <button class="operator">/</button>
       </div>
       <div id="numerals">
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
-        <button>0</button>
-        <button>clear</button>
-        <button>enter</button>
+        <button class="numeral">1</button>
+        <button class="numeral">2</button>
+        <button class="numeral">3</button>
+        <button class="numeral">4</button>
+        <button class="numeral">5</button>
+        <button class="numeral">6</button>
+        <button class="numeral">7</button>
+        <button class="numeral">8</button>
+        <button class="numeral">9</button>
+        <button class="numeral">0</button>
+        <button class="numeral">.</button>
+        <button class="action">clear</button>
+        <button class="action">enter</button>
       </div>
     </div>
   </body>
+  <script src="script.js"></script>
 </html>
